<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/help"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<TextView
		android:id="@+id/textView2"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="48dp"
		android:layout_marginStart="48dp"
		android:layout_marginTop="128dp"
		android:text="@string/contacts_description1"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/send_email_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:focusable="true"
		android:text="@string/send_mail_btn"
		android:textColor="@color/help_btns_color"
		android:textSize="16sp"
		app:layout_constraintStart_toStartOf="@+id/textView2"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginEnd="48dp"
		android:layout_marginStart="48dp"
		android:layout_marginTop="36dp"
		android:text="@string/contacts_description2"
		android:textSize="20sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView2" />

	<TextView
		android:id="@+id/make_call_btn"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:clickable="true"
		android:focusable="true"
		android:text="@string/make_call_btn"
		android:textColor="@color/help_btns_color"
		android:textSize="16sp"
		app:layout_constraintStart_toStartOf="@+id/textView3"
		app:layout_constraintTop_toBottomOf="@+id/textView3" />

</android.support.constraint.ConstraintLayout>