<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<TextView
		android:id="@+id/city_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="50dp"
		android:textSize="30sp" />

	<ImageView
		android:id="@+id/today_icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal" />

	<TextView
		android:id="@+id/today_description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginTop="15dp"
		android:ellipsize="marquee"
		android:maxLength="22"
		android:singleLine="true"
		android:textSize="24sp" />

	<GridLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="15dp"
		android:columnCount="2"
		android:orientation="horizontal">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingTop="10dp"
			android:text="@string/temperature_text"
			android:textSize="18sp" />

		<TextView
			android:id="@+id/today_temperature"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="15dp"
			android:paddingBottom="10dp"
			android:paddingTop="10dp"
			android:textSize="18sp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingTop="10dp"
			android:text="@string/pressure_text"
			android:textSize="18sp" />

		<TextView
			android:id="@+id/today_pressure"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="15dp"
			android:paddingBottom="10dp"
			android:paddingTop="10dp"
			android:textSize="18sp" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingBottom="10dp"
			android:paddingTop="10dp"
			android:text="@string/humidity_text"
			android:textSize="18sp" />

		<TextView
			android:id="@+id/today_humidity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="15dp"
			android:paddingBottom="10dp"
			android:paddingTop="10dp"
			android:textSize="18sp" />

	</GridLayout>

</LinearLayout>